istio-api-gateway/apps/retail-banking/3-customer-profile.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
    kubernetes.io/metadata.name: retail-banking-ns
  name: retail-banking-ns
---
apiVersion: v1
kind: Service
metadata:
  name: customer-profile-svc
  namespace: retail-banking-ns
spec:
  # type: LoadBalancer
  selector:
    app: customer-profile-svc
  ports:
    - port: 8081
      targetPort: 9091
---
# apiVersion: consul.hashicorp.com/v1alpha1
# kind: ServiceDefaults
# metadata:
#   name: customer-profile-svc
#   namespace: retail-banking-ns
# spec:
#   protocol: "http"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-profile-svc
  namespace: retail-banking-ns
  labels:
    app: customer-profile-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-profile-svc
  template:
    metadata:
      labels:
        app: customer-profile-svc
      annotations:
        # consul.hashicorp.com/connect-inject: 'true'
        # consul.hashicorp.com/connect-service-upstreams: 'account-service:9091'
    spec:
      serviceAccountName: customer-profile-svc
      containers:
        - name: customer-profile-svc
          image: nicholasjackson/fake-service:v0.26.2
          ports:
            - containerPort: 9091
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
